unpackaged/main/default/objects/SFDC_Candidate__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pre-Screen</fullName>
            </value>
            <value>
                <fullName>Online Assessment Test</fullName>
            </value>
            <value>
                <fullName>Screened-In</fullName>
            </value>
            <value>
                <fullName>Phone Interview #1</fullName>
            </value>
            <value>
                <fullName>Reference Check</fullName>
            </value>
            <value>
                <fullName>References Provided</fullName>
            </value>
            <value>
                <fullName>Phone Interview #2</fullName>
            </value>
            <value>
                <fullName>Offer Released</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Offer Declined</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Passive Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>