unpackaged/main/default/objects/SFDC_Candidate__c/fields/Candidate_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Compensation__c</fullName>
    <label>Candidate Compensation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>