unpackaged/main/default/objects/SFDC_Candidate__c/fields/Candidate_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Ranking__c</fullName>
    <label>Candidate Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>