unpackaged/main/default/objects/SFDC_Candidate__c/fields/Current_Position_Duration__c.field-meta.xml
<CustomField>
    <fullName>Current_Position_Duration__c</fullName>
    <label>Current Position Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 6 months</fullName>
            </value>
            <value>
                <fullName>7-12 months</fullName>
            </value>
            <value>
                <fullName>1 - 2 years</fullName>
            </value>
            <value>
                <fullName>3 - 4 years</fullName>
            </value>
            <value>
                <fullName>more than 5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>