unpackaged/main/default/objects/SFDC_Candidate__c/fields/Interview_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Request_Date__c</fullName>
    <label>Interview Request Date</label>
    <type>DateTime</type>
</CustomField>