unpackaged/main/default/objects/SFDC_Candidate__c/fields/Interviewer1_Appointment_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Interviewer1_Appointment_Scheduling__c</fullName>
    <formula>SFDC_Department__r.Interviewer_1__r.Online_Appointment_Scheduling_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interviewer1 Appointment Scheduling</label>
    <type>Text</type>
</CustomField>