unpackaged/main/default/objects/SFDC_Candidate__c/fields/Interviewer2_Appointment_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Interviewer2_Appointment_Scheduling__c</fullName>
    <formula>SFDC_Department__r.Interviewer_2__r.Online_Appointment_Scheduling_URL__c</formula>
    <label>Interviewer2 Appointment Scheduling</label>
    <type>Text</type>
</CustomField>