unpackaged/main/default/objects/SFDC_Candidate__c/fields/Interviewer_1__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_1__c</fullName>
    <formula>SFDC_Department__r.Interviewer_1__r.FirstName &amp; &#39; &#39; &amp; SFDC_Department__r.Interviewer_1__r.LastName</formula>
    <label>Interviewer 1</label>
    <type>Text</type>
</CustomField>