unpackaged/main/default/objects/SFDC_Candidate__c/fields/Interviewer_2__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_2__c</fullName>
    <formula>SFDC_Department__r.Interviewer_2__r.FirstName &amp; &#39; &#39; &amp; SFDC_Department__r.Interviewer_2__r.LastName</formula>
    <label>Interviewer 2</label>
    <type>Text</type>
</CustomField>