unpackaged/main/default/objects/SFDC_Candidate__c/fields/Job_Codes__c.field-meta.xml
<CustomField>
    <fullName>Job_Codes__c</fullName>
    <label>Job Codes</label>
    <length>20</length>
    <type>Text</type>
</CustomField>