unpackaged/main/default/objects/SFDC_Candidate__c/fields/Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Location__c</fullName>
    <label>Job Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Main Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>