unpackaged/main/default/objects/SFDC_Candidate__c/fields/Last_Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contacted_Date__c</fullName>
    <label>Last Contacted Date</label>
    <type>Date</type>
</CustomField>