unpackaged/main/default/objects/SFDC_Candidate__c/fields/Notice_Period_in_days__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_in_days__c</fullName>
    <label>Notice Period(in days)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>