unpackaged/main/default/objects/SFDC_Candidate__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Applied for Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>