unpackaged/main/default/objects/SFDC_Candidate__c/fields/Previously_Interviewed__c.field-meta.xml
<CustomField>
    <fullName>Previously_Interviewed__c</fullName>
    <label>Previously Interviewed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>