unpackaged/main/default/objects/SFDC_Candidate__c/fields/Reason_for_Declining_Offer__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Declining_Offer__c</fullName>
    <label>Reason for Declining Offer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compensation too low</fullName>
            </value>
            <value>
                <fullName>Not interested in the position</fullName>
            </value>
            <value>
                <fullName>Took another job</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>