unpackaged/main/default/objects/SFDC_Candidate__c/fields/Recruiter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Notes__c</fullName>
    <label>Recruiter Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>