unpackaged/main/default/objects/SFDC_Candidate__c/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <label>Resume</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>