unpackaged/main/default/objects/SFDC_Candidate__c/fields/Screened_In_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Screened_In_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Screened-In Email Sent?</label>
    <type>Checkbox</type>
</CustomField>