unpackaged/main/default/objects/SFDC_Candidate__c/fields/SFDC_Active_Declined_Status__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Active_Declined_Status__c</fullName>
    <label>Active_Declined_Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>