unpackaged/main/default/objects/SFDC_Candidate__c/fields/SFDC_Candidate_Alt_Email__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Candidate_Alt_Email__c</fullName>
    <description>Alternative or second email address</description>
    <label>Candidate (Alternate Email)</label>
    <type>Email</type>
</CustomField>