unpackaged/main/default/objects/SFDC_Candidate__c/fields/SFDC_Candidate_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Candidate_Birthdate__c</fullName>
    <label>Candidate_Birthdate</label>
    <type>Date</type>
</CustomField>