unpackaged/main/default/objects/SFDC_Candidate__c/fields/SFDC_Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Candidate_Name__c</fullName>
    <description>Full name of the candidate</description>
    <label>Candidate Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>