unpackaged/main/default/objects/SFDC_Candidate__c/fields/Target_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Target_Hourly_Rate__c</fullName>
    <label>Target Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>