unpackaged/main/default/objects/SFDC_Candidate__c/fields/Test_Dome_Complete__c.field-meta.xml
<CustomField>
    <fullName>Test_Dome_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Dome Complete</label>
    <type>Checkbox</type>
</CustomField>