unpackaged/main/default/objects/SFDC_Candidate__c/fields/Test_Dome_Score__c.field-meta.xml
<CustomField>
    <fullName>Test_Dome_Score__c</fullName>
    <label>Test Dome Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>