unpackaged/main/default/objects/SFDC_Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>Candidate_Status__c</columns>
    <columns>Target_Hourly_Rate__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Candidate_Ranking__c</columns>
    <columns>Recruiter_Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>