unpackaged/main/default/objects/SFDC_Candidate__c/listViews/Backend_Developer.listView-meta.xml
<ListView>
    <fullName>Backend_Developer</fullName>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>Target_Hourly_Rate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Backend Developer</value>
    </filters>
    <label>Backend Developer</label>
</ListView>