unpackaged/main/default/objects/SFDC_Candidate__c/listViews/Engagement_Manager.listView-meta.xml
<ListView>
    <fullName>Engagement_Manager</fullName>
    <columns>NAME</columns>
    <columns>Application_Status__c</columns>
    <columns>Position__c</columns>
    <columns>Target_Hourly_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Engagement Manager</value>
    </filters>
    <filters>
        <field>Application_Status__c</field>
        <operation>notEqual</operation>
        <value>Offer Accepted,Offer Declined,Rejected</value>
    </filters>
    <label>Engagement Manager</label>
</ListView>