unpackaged/main/default/objects/SFDC_Candidate__c/listViews/New_Applicants.listView-meta.xml
<ListView>
    <fullName>New_Applicants</fullName>
    <columns>NAME</columns>
    <columns>Application_Status__c</columns>
    <columns>Position__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Applicants</label>
</ListView>