unpackaged/main/default/objects/SFDC_Candidate__c/listViews/Online_Assessment.listView-meta.xml
<ListView>
    <fullName>Online_Assessment</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Application_Status__c</columns>
    <columns>Target_Hourly_Rate__c</columns>
    <columns>Test_Dome_Complete__c</columns>
    <columns>Test_Dome_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Online Assessment Test</value>
    </filters>
    <label>Online Assessment</label>
</ListView>