unpackaged/main/default/objects/SFDC_Candidate__c/listViews/React_Native_Developer.listView-meta.xml
<ListView>
    <fullName>React_Native_Developer</fullName>
    <columns>Application_Status__c</columns>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>React Native Developer</value>
    </filters>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>New,Pre-Screen,Online Assessment Test,Screened-In,Reference Check,References Provided,Phone Interview #1,Phone Interview #2,Offer Released,Negotiation</value>
    </filters>
    <label>React Native Developer</label>
</ListView>