unpackaged/main/default/objects/SFDC_Candidate__c/listViews/Recruiting_Coordinator.listView-meta.xml
<ListView>
    <fullName>Recruiting_Coordinator</fullName>
    <columns>NAME</columns>
    <columns>Application_Status__c</columns>
    <columns>Position__c</columns>
    <columns>SFDC_Candidate_Email__c</columns>
    <columns>Target_Hourly_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Recruiting Coordinator</value>
    </filters>
    <label>Recruiting Coordinator</label>
</ListView>