unpackaged/main/default/objects/SFDC_Candidate__c/listViews/Sales_Development_Rep.listView-meta.xml
<ListView>
    <fullName>Sales_Development_Rep</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Sales Development Representative</value>
    </filters>
    <label>Sales Development Rep</label>
</ListView>