unpackaged/main/default/objects/SFDC_Candidate__c/listViews/Solution_Architect_Candidates.listView-meta.xml
<ListView>
    <fullName>Solution_Architect_Candidates</fullName>
    <columns>Application_Status__c</columns>
    <columns>NAME</columns>
    <columns>Position__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Solution Architect</value>
    </filters>
    <filters>
        <field>Application_Status__c</field>
        <operation>notEqual</operation>
        <value>Offer Accepted,Offer Declined,Rejected</value>
    </filters>
    <label>Solution Architect Candidates</label>
</ListView>