unpackaged/main/default/objects/SFDC_Candidate__c/listViews/Sr_Qaulity_Assurance_Engineer.listView-meta.xml
<ListView>
    <fullName>Sr_Qaulity_Assurance_Engineer</fullName>
    <columns>NAME</columns>
    <columns>Application_Status__c</columns>
    <columns>Position__c</columns>
    <columns>Target_Hourly_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Sr. Quality Assurance Engineer</value>
    </filters>
    <label>Sr. Qaulity Assurance Engineer</label>
</ListView>