unpackaged/main/default/objects/SFDC_Candidate__c/listViews/Technical_Architect.listView-meta.xml
<ListView>
    <fullName>Technical_Architect</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Technical Architect</value>
    </filters>
    <label>Technical Architect</label>
</ListView>